2008-01-19  smeghead <smeghead@users.sourceforge.jp>

    * レポート機能の追加。検索結果として表示している一覧の内容をCSVでダウンロ
    ードできるようにした。
    * 一覧での、状態の背景色を変える仕組みがあるが、同様のことを優先度や重要度
    などの一般の項目でも行ないたい。そのための仕組みを追加した。
    * 一覧での、状態、優先度の背景色の設定を、user.cssに移動した。
    * sortができなくなっていたのを修正した。

2008-01-17  smeghead <smeghead@users.sourceforge.jp>

    * 0.1.2-beta リリース

2008-01-17  smeghead <smeghead@users.sourceforge.jp>

    * 不要なファイルを削除した。missing
    * .htaccessで一般ユーザと管理ユーザのBasic認証の設定を分割した。
    * .htaccessで参照する必要の無いファイルやディレクトリを隠す設定を追加した。
    * INSTALLの.htaccess周りの設定方法を更新した。
    * ヘルプを更新した。

2008-01-15  smeghead <smeghead@users.sourceforge.jp>

    * INSTALLの更新。インストール時のFAQを追加。

2008-01-14  smeghead <smeghead@users.sourceforge.jp>

    * READMEの文字コードをUTF-8に変更。
    * INSTALLのネガティブな表記を変更した。

2008-01-13  smeghead <smeghead@users.sourceforge.jp>

    * 検索条件の日付フィールドのmaxlengthを10に指定した。

2008-01-12  smeghead <smeghead@users.sourceforge.jp>

    * 日付の項目を追加した。yyyy-mm-ddで入力してもらうという形にする。現在、管
    理ツール、チケット登録画面、チケット返信画面での日付の項目の対応を行なった。
    検索部分の対応は未。
    * e_typeという変数名をetに統一した。
    * 日付の項目の検索画面での対応を行なった。
    * チケット詳細画面の最新情報に、IDの欄を追加した。

2008-01-09  smeghead <smeghead@users.sourceforge.jp>

    * ボタンを目立つようにcssを変更した。ボタンの色、カーソルなどを変更した。

2008-01-07  smeghead <smeghead@users.sourceforge.jp>

    * JavaScriptでチェックしているというメッセージを、JavaScriptを使用できない
    環境の時のみ出力するように変更した。

2008-01-05  smeghead <smeghead@users.sourceforge.jp>

    * 統計情報のページを追加した。チケット属性のうち、単一選択肢のものと複数選
    択肢のものについて、何件づつ存在するかを表示するようにした。
    * 状態別チケット一覧でlist.jsを読み込んでいたのを削除した。list.jsは削除済

2008-01-04  smeghead <smeghead@users.sourceforge.jp>

    * 管理ツールでのJavaScriptのalertでの確認でキャンセルを押した場合に、その
    ままsubmitされる場合があったのを修正。prototype.jsのEvent.stopメソッドでキ
    ャンセルを行なうように統一した。
    * 管理ツールで、新規項目の追加の際のチケット項目と返信専用属性の説明文が古
    い状態だったのを修正した。
    * クリックという言葉を廃止して押すという表現に統一した。
    * メニューのリンクにtitle属性で簡単な説明を追加した。
    * トップページにID検索フォームを追加した。
    * トップページの最新情報状態別件数のリストにリストアイコンを指定した。
    * ファイルサイズの制限についての文言を追加した。

2008-01-03  smeghead <smeghead@users.sourceforge.jp>
